tests/snapshots/typeck__fail_covariant_return_tys-ast.snap
---
source: tests/typeck.rs
description: "class Base {\n    test(): Int {\n        42\n    };\n};\n\nclass Dervied inherits Base {\n    test(): Object {\n        42\n    };\n};\n\nclass Main inherits Derived {\n    main(): Object {\n        0\n    };\n};\n"
expression: "SnapshotData { failed, classes: &classes }"
---
SnapshotData(
  failed: true,
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "Base",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "test",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 20,
                line: 2,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Int",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 25,
                line: 2,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 27,
                line: 2,
                col: 15,
              ),
            ),
          ))),
          body: Int(IntLit(Spanned(
            value: 42,
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 39,
                line: 3,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 40,
                line: 3,
                col: 10,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 20,
              line: 2,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: Builtin(Int),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Base")),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "Dervied",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 59,
            line: 7,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 65,
            line: 7,
            col: 13,
          ),
        ),
      ))),
      inherits: Some(TyName(Name(Spanned(
        value: "Base",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 76,
            line: 7,
            col: 24,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 79,
            line: 7,
            col: 27,
          ),
        ),
      )))),
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "test",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 87,
                line: 8,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 90,
                line: 8,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Object",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 95,
                line: 8,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 100,
                line: 8,
                col: 18,
              ),
            ),
          ))),
          body: Int(IntLit(Spanned(
            value: 42,
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 112,
                line: 9,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 113,
                line: 9,
                col: 10,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 87,
              line: 8,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 90,
              line: 8,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: Builtin(Object),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 53,
          line: 7,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 57,
          line: 7,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Dervied")),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 132,
            line: 13,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 135,
            line: 13,
            col: 10,
          ),
        ),
      ))),
      inherits: Some(TyName(Name(Spanned(
        value: "Derived",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 146,
            line: 13,
            col: 21,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 152,
            line: 13,
            col: 27,
          ),
        ),
      )))),
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 160,
                line: 14,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 163,
                line: 14,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Object",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 168,
                line: 14,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 173,
                line: 14,
                col: 18,
              ),
            ),
          ))),
          body: Int(IntLit(Spanned(
            value: 0,
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 185,
                line: 15,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 185,
                line: 15,
                col: 9,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 160,
              line: 14,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 163,
              line: 14,
              col: 8,
            ),
          ),
          ty: Unresolved(Function(
            args: [],
            ret: Unresolved(Named(TyName(Name(Spanned(
              value: "Object",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 168,
                  line: 14,
                  col: 13,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 173,
                  line: 14,
                  col: 18,
                ),
              ),
            ))))),
          )),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 126,
          line: 13,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 130,
          line: 13,
          col: 5,
        ),
      ),
      ty: Unresolved(Named(TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 132,
            line: 13,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 135,
            line: 13,
            col: 10,
          ),
        ),
      ))))),
    ),
  ],
)
