tests/snapshots/typeck__fail_double_class-diagnostics.snap
---
source: tests/typeck.rs
description: "class A {};\nclass A {};\n"
expression: "&diagnostics"
---
[
    Diagnostic {
        level: Error,
        message: DiagnosticMessage {
            span: Some(
                Span(2:7, 18 bytes into Some(SourceId(1))),
            ),
            message: "detected multiple definition: class `A` is already defined",
        },
        source: Some(
            MultipleClassDefinition {
                ty_name: TyName {
                    span: Span(2:7, 18 bytes into Some(SourceId(1))),
                    value: b"A",
                },
                previous: UserCode(
                    Span(1:1-5, bytes 0-4 in Some(SourceId(1))),
                ),
            },
        ),
    },
]
